--- a/CompStore1/CompStore/Views/Category/Index.cshtml
+++ b/CompStore1/CompStore/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Категории</h2>
+    <h2>Это страница для категорий продуктов</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            Название
+            Наименование
         </th>
         <th></th>
     </tr>
