--- a/CompStore1/CompStore/Views/Category/Index.cshtml
+++ b/CompStore1/CompStore/Views/Category/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            Наименование
+            Наименование-branch1.2
         </th>
         <th></th>
     </tr>
